--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "solidity-coverage": "^0.7.16",
     "ts-generator": "^0.1.1",
     "ts-node": "^10.2.0",
-    "typechain": "^5.1.2",
-    "typescript": "^4.3.5"
+    "typechain": "^5.1.2"
   },
   "dependencies": {
     "@tenderly/hardhat-tenderly": "^1.1.0-beta.6",
